src/snapshots/ruff__linter__tests__D409_sections.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    SectionUnderlineMatchesSectionLength: Returns
  location:
    row: 99
    column: 5
  end_location:
    row: 105
    column: 8
  fix: ~
- kind:
    SectionUnderlineMatchesSectionLength: Returns
  location:
    row: 207
    column: 5
  end_location:
    row: 221
    column: 8
  fix: ~

